K8/deplyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-process-deployment
  labels:
    app: order-process
spec:
  replicas: 3
  selector:
    matchLabels:
      app: order-process
  template:
    metadata:
      labels:
        app: order-process
    spec:
      containers:
        - name: order-process
          image: docker-repo/order-process:latest
          ports:
            - containerPort: 8080
