K8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-process-service
spec:
  selector:
    app: order-process
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
