K8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-process
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: order-process.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: order-process-service
                port:
                  number: 80
  tls:
    - hosts:
        - order-process.example.com
      secretName: order-process-tls
